# miditerm

./: Cargo.toml  README.md  midi_sysex_ids.csv  midi_sysex_ids.xlsx
data/: ids.json
src/: main.rs
src/midi/: controls.rs  mod.rs  parser.rs  sysex.rs  unparser.rs
src/ui/: app.rs  mod.rs  root.rs
tools/: id_csv_to_json.py
