[package]
name = "miditerm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
crossterm = "0.26"
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.2"
structopt = "0.3"
tui = "0.19"